--Auteurs: Quentin Enjalbert, Flavien Coçu
--Creation des tables Article, Compte, Panier, Note

DROP TABLE IF EXISTS MESSAGE;
DROP TABLE IF EXISTS PANIER;
DROP TABLE IF EXISTS NOTE;
DROP TABLE IF EXISTS ARTICLE;
DROP TABLE IF EXISTS COMPTE;

CREATE TABLE COMPTE(
	idCompte SERIAL PRIMARY KEY,
	nomDeCompte VARCHAR(32) NOT NULL,
	mdpCompte VARCHAR(70) NOT NULL,
	roleCompte VARCHAR(20) NOT NULL,
	email VARCHAR(120) NOT NULL,
	noteMoyenneCompte REAL,
	nbNotes INTEGER,
	CHECK (roleCompte IN ('Administrateur', 'Normal'))
);

CREATE TABLE ARTICLE(
	idArticle SERIAL PRIMARY KEY,
	idVendeur INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	nomArticle VARCHAR(32) NOT NULL,
	prixArticle DECIMAL(12,2) NOT NULL,
	descriptionCourteArticle VARCHAR(64),
	descriptionLongueArticle VARCHAR(512),
	etat VARCHAR(20),
	categorie VARCHAR(60),
	img VARCHAR(512),
	lieu VARCHAR(60),
	CHECK (categorie IN ('VEHICULES','IMMOBILIER', 'MULTIMEDIA','MATERIELPROFESSIONNEL','LOISIRS','SERVICES','MODE','MAISON')),
	CHECK (lieu IN ('CENTRE', 'NORD','SUD','EST','OUEST')),
	CHECK (etat IN ('Valide', 'NonValide'))
);

CREATE TABLE NOTE(
	idVendeur INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	idAcheteur INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	note INTEGER NOT NULL CHECK (note>=0 AND note<=5),
	PRIMARY KEY (idVendeur,idAcheteur),
	CHECK (idAcheteur <> idVendeur)
);

CREATE TABLE PANIER(
	idCompte INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	idArticle INTEGER NOT NULL REFERENCES ARTICLE(idArticle) ON DELETE CASCADE,
	PRIMARY KEY (idCompte,idArticle)
);

CREATE TABLE MESSAGE(
	idMessage SERIAL PRIMARY KEY,
	idExpediteur INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	idDestinataire INTEGER NOT NULL REFERENCES COMPTE(idCompte) ON DELETE CASCADE,
	contenu VARCHAR(140) NOT NULL,
	dateEnvoi TIMESTAMP(0) DEFAULT CURRENT_TIMESTAMP
);
